--- a/vignettes/M3Cvignette.Rmd
+++ b/vignettes/M3Cvignette.Rmd
@@ -12,7 +12,7 @@ vignette: >
 
 # Abstract
 
-Genome-wide data is used to stratify large complex datasets into classes using class discovery algorithms. The Monti consensus clustering algorithm is a widely applied method to identify classes, however; it is prone to overfitting and false positives. As a solution, we developed Monte Carlo reference-based consensus clustering (M3C). M3C uses a multi-core enabled Monte Carlo simulation to generate null distributions along the range of K which are used to select its value. Using a reference, that maintains the correlation structure of the input features, eliminates the limitations of the Monti consensus clustering method. M3C uses the Relative Cluster Stability Index (RCSI) and p values to decide on the value of K and reject the null hypothesis, K=1. 
+Genome-wide data is used to stratify large complex datasets into classes using clustering algorithms. The Monti consensus clustering algorithm is a widely applied method to identify the number of clusters (K), however; it has inherant bias towards greater values of K and yields high numbers of false positives. As a solution, we developed Monte Carlo reference-based consensus clustering (M3C). M3C uses a Monte Carlo simulation to generate null distributions of stability scores along the range of K which are used to help decide the optimal value. Using a reference, that maintains the correlation structure of the input features, eliminates the limitations of this consensus clustering method. M3C uses the Relative Cluster Stability Index (RCSI) and p values to decide on the value of K and reject the null hypothesis, K=1. 
 
 # Prerequisites
 
@@ -20,7 +20,7 @@ Genome-wide data is used to stratify large complex datasets into classes using c
 
 For the Monte Carlo reference (method=1), M3C is best run on a relatively new and fast multi-core computer or cluster. If your machine is not particuarly fast, you can reduce the Monte Carlo iterations down to 10-50x. 
 
-The second method (method=2) that uses a penalty term to eliminate overfitting is faster, but you will not get p values for each value of K.
+The second method (method=2) that uses a penalty term to eliminate overestimation of K is faster, but you will not get p values for each value of K.
 
 **M3C requires**   
 
@@ -32,7 +32,7 @@ The data should be filtered to remove features with no or very low signal, and f
 
 Outliers should be removed, we include a PCA function which has a text label parameter to help remove outliers (type ?pca for more information).
 
-We recommend M3C only be used to cluster datasets with high numbers of samples (e.g. 60-1000). M3C is mainly aimed at large patient cohort datasets such as those produced by TCGA and other consortia. Because of the high complexity of the algorithm and the type of consensus matrix it makes, it is not well suited for single cell RNA-seq data, better to use SC3, for example. 
+We recommend M3C only be used to cluster datasets with high numbers of samples (e.g. 60-1000). M3C is mainly aimed at large patient cohort datasets such as those produced by TCGA and other consortia. Because of the high complexity of the algorithm and the type of consensus matrix it makes, it is not well suited for single cell RNA-seq data, better to use SC3 or Seurat, for example. 
 
 **M3C also accepts optionally**
 
@@ -99,12 +99,12 @@ res$clinicalres
 
 Now we will take a look at some of the plots M3C generates.  
 
-This is a CDF plot of the consensus matrices for our test data. We are looking for the value of K with the flattest curve and this can be quantified using the PAC metric (Senbabaoglu et al., 2014). In the CDF and following PAC plot we can see the overfitting effect of consensus clustering where as K increases so does the apparent stability of the results for any given dataset, this we correct for by using a reference.
+This is a CDF plot of the consensus matrices for our test data. We are looking for the value of K with the flattest curve and this can be quantified using the PAC metric (Senbabaoglu et al., 2014). In the CDF and following PAC plot we can see the inherant bias of consensus clustering where as K increases so does the apparent stability of the results for any given dataset, this we correct for by using a reference.
 \newline  
   
 ![*Figure 2: CDF plot for real data*](CDF.png)
 
-This figure below is the PAC score, we can see an elbow at K = 4 which is suggestive this is the best K. However, the overfitting problem of the PAC score can be seen here as it tends towards lower values as K increases, thus making selecting K without taking this into account challenging to say the least. Furthermore, the PAC score cannot reject the null hypothesis K=1, for that we have introduced p values into the consensus clustering methodology. 
+This figure below is the PAC score, we can see an elbow at K = 4 which is suggestive this is the best K. However, the bias of the PAC score can be seen here as it naturaly tends towards lower values as K increases, thus making selecting K without taking this into account challenging to say the least. Furthermore, the PAC score cannot reject the null hypothesis K=1, for that we have introduced p values into the consensus clustering methodology. 
 
 ![*Figure 3: PAC score for real data*](PACscore.png){width=90%}
 
@@ -155,14 +155,21 @@ NMF::aheatmap(data, annCol = annon, Colv = NA, distfun = 'pearson',
 
 ![*Figure 7: aheatmap of GBM consensus clusters with tumour classification *](aheatmapGBMfour-vin2.png)
 
-Another plot we may want to do for publications is print the consensus matrix for our optimal clustering solution (in this case, K = 4). This should be quite crisp reflecting the significant stability of the results. We can see in this heatmap below of the consensus matrix the clusters do indeed look quite clear supporting our view that there is 4 clusters.
+Another plot we may want to do for publications is print the consensus matrix for our optimal clustering solution (in this case, K = 4). This should be quite crisp reflecting the significant stability of the results. We can see in this heatmap below of the consensus matrix the clusters do indeed look quite clear supporting our view that there is 4 clusters. 
+
+Viewing consensus matrices manually should not be used to decide K, better to use the RCSI or p values that M3C provides to quantify the mixing proportions in the matrix. We also caution against the use of cluster validity metrics on the consensus matrices without first testing their behaviour on simulated positive control datasets. Our data indicates that these metrics may have substantial bias in them as well.
 
 ```{r,fig.show = 'hide'}
-# time to plot the consensus matrix for the optimal cluster decision
-ccmatrix <- res$realdataresults[[4]]$consensus_matrix # pull out the consensus matrix from the k = 4 object
-pal <- rev(colorRampPalette(RColorBrewer::brewer.pal(9, "Reds"))(256)) # get some nice colours
-NMF::aheatmap(ccmatrix, annCol = annon, Colv = NA, Rowv = NA, 
-              color = rev(pal), scale = 'none') # plot the heatmap
+# set up colours
+n <- 10
+seq = rev(seq(0,255,by=255/(n)))
+palRGB = cbind(seq,seq,255)
+mypal <-rgb(palRGB,maxColorValue=255)
+# plot consensus matrix heatmap, do not cluster rows and columns
+NMF::aheatmap(ccmatrix, 
+              annCol = annon[,1,drop=FALSE], 
+              color = mypal, scale = 'none', cexRow = 0, cexCol = 0,
+              Colv=NA,Rowv=NA,annColors = list(consensuscluster=ann_colors2))
 ```
 
 ![*Figure 8: aheatmap of GBM consensus matrix *](aheatmapconsensusmatrix-vin2.png)
@@ -188,7 +195,7 @@ We can see in the PCA and t-SNE plots that clusters 3 and 4 are closer together.
 
 The second method minimises log(PAC) subject to lambda*K to find the optimal K. This metric is called the Penalised Cluster Stability Index (PCSI). 
 
-We recommend using this method if the user has a massive dataset or little time. It will correct for the overfitting effect observed with the PAC score.
+We recommend using this method if the user has a massive dataset or little time. It will correct for the overestimation of K observed with the PAC score.
 
 ```{r,fig.show = 'hide',message=FALSE,results='hide'}
 res <- M3C(mydata, method = 2)
